# OS_lab_4

./: .gitignore  CMakeLists.txt
include/: common.h  logging.h  sample.h
scripts/: build.cmd  build.sh
src/: common.cpp  logging.cpp  main.cpp  sample.cpp
